[gd_scene load_steps=6 format=3 uid="uid://dn17tbs2dwo0q"]

[ext_resource type="Theme" uid="uid://cc4a4pwjrogip" path="res://style/arcade.tres" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://bqnvl7aapihp2" path="res://style/PublicPixel.ttf" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://vjm3jdufqhgj" path="res://scripts/main_menu.gd" id="2_bqqt6"]
[ext_resource type="PackedScene" uid="uid://txxmnnsfvgl8" path="res://scenes/background.tscn" id="3_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_ekxnf"]
font = ExtResource("1_l6cm7")
font_size = 86

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ekxnf")
script = ExtResource("2_bqqt6")

[node name="BirdSpawn" type="Marker2D" parent="."]
position = Vector2(400, 420)

[node name="Background" parent="." instance=ExtResource("3_wu84c")]
layout_mode = 1

[node name="Ttile" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 77.0
offset_right = 204.0
offset_bottom = 213.0
grow_horizontal = 2
text = "DICK
HUNT"
label_settings = SubResource("LabelSettings_ekxnf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="."]
z_index = 10
layout_mode = 1
offset_left = 196.0
offset_top = 485.52
offset_right = 604.0
offset_bottom = 534.5201
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
text = "PLAY"
flat = true

[node name="Exit" type="Button" parent="."]
z_index = 10
layout_mode = 1
offset_left = 196.0
offset_top = 536.0
offset_right = 604.0
offset_bottom = 585.0
focus_neighbor_top = NodePath("../Play")
focus_previous = NodePath("../Play")
text = "EXIT GAME"
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
